Updating the changelog.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,3 +1,25 @@
 Changelog
 =========
 
+2.1.0 (2014-05-21)
+------------------
+
+* Added unit tests.
+* Tidied the product metadata and dependencies.
+* Confirmed that the product works on Python 3 and PyPy.
+
+2.0.0 (2013-08-09)
+------------------
+
+* Product metadata clean up.
+
+1.1.0 (2012-07-16)
+------------------
+
+* Using ``gs.config`` for the configuration.
+
+
+1.0.0 (2012-06-24)
+------------------
+
+* Initial version
